[package]
name = "pe-sign"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1

[dependencies]
chrono = "0.4.38"
clap = "4.5.10"
exe = "0.5.6"
foreign-types = "0.3.1"
openssl = { version = "0.10.66" }
openssl-sys = "0.9.103"
pretty-hex = "0.4.1"
